fix the squashing bug

--- a/src/pages/cover-letter/sub/letter-preview.css
+++ b/src/pages/cover-letter/sub/letter-preview.css
@@ -1,15 +1,17 @@
 .letter-preview {
   aspect-ratio: 1/1.4142;
+  position: relative;
   width: 33vw;
   max-width: 600px;
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
   border-radius: 9px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   padding:20px;
   color: #000000;
   overflow: hidden;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .letter-body{
@@ -21,7 +23,7 @@
 
 .letter-footer h4{
     position: absolute;
-    bottom: 13%;
+    bottom: 7%;
 }
 
 .letter-details p{
